The change ("c") command should start a new cycle.

Apply one line patch I posted in PR #45981 and document this in the
manual page.